pc - update 04 github token settings

--- a/.github/workflows/04-gh-pages-redeploy-part-2-backend.yml
+++ b/.github/workflows/04-gh-pages-redeploy-part-2-backend.yml
@@ -106,9 +106,9 @@ jobs:
     - name: a-javadoc Download artifact
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: javadoc
-        path: ${{env.javadoc_dest }}
+        path: ${{ env.javadoc_dest }}
         check_artifacts: true
         if_no_artifact_found: error
     - name: a-javadoc Debugging output
@@ -129,7 +129,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: jacoco
         path: ${{ env.jacoco_dest }}
         check_artifacts: true
@@ -150,7 +150,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: pitest
         path: ${{ env.pitest_dest }}
         check_artifacts: true
@@ -188,7 +188,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: prs-${{ matrix.value.number }}-javadoc
         path: ${{ env.javadoc_dest }}
         check_artifacts: true
@@ -210,7 +210,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: prs-${{ matrix.value.number }}-jacoco
         path: ${{ env.jacoco_dest }}
         check_artifacts: true
@@ -231,7 +231,7 @@ jobs:
       uses: dawidd6/action-download-artifact@v2.27.0
       with:
         workflow: 02-gh-pages-rebuild-part-1.yml
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        github_token: ${{ github.token }}
         name: prs-${{ matrix.value.number }}-pitest
         path: ${{ env.pitest_dest }}
         check_artifacts: true
