--- a/.github/workflows/99-team01.yml
+++ b/.github/workflows/99-team01.yml
@@ -2,7 +2,7 @@
 name: 99 - Create Issues for team01
 
 env:
-  ASN_LINK: https://ucsb-cs156.github.io/w24/lab/team01
+  ASN_LINK: https://ucsb-cs156.github.io/s24/lab/team01
   GH_TOKEN: ${{ github.token }}
 
 on:
